Add comprehensive test suite with 46 tests
- Add pytest, pytest-cov, and pytest-mock to requirements.txt
- Create conftest.py with fixtures for testing
- Add test_photo_renamer.py with 32 unit tests (mock-based)
- Add test_integration.py with 14 integration tests using real files
- Update README.md with testing section and instructions
- Update .gitignore to exclude pytest and coverage artifacts
- Achieve 63% code coverage with all tests passing

--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,14 @@ venv.bak/
 ehthumbs.db
 Thumbs.db
 
+# Testing
+.pytest_cache/
+htmlcov/
+.coverage
+*.cover
+.hypothesis/
+.tox/
+
 # LLM files and directories
 .claude/
 *.claude.md
